--- a/i2i.xcodeproj/xcshareddata/xcschemes/i2i.xcscheme
+++ b/i2i.xcodeproj/xcshareddata/xcschemes/i2i.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A892351819D95D9B00338482"
+               BuildableName = "i2i.xctest"
+               BlueprintName = "i2iTests"
+               ReferencedContainer = "container:i2i.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
